[package]
name          = "sincere"
version       = "0.6.0"
license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "web framework"
documentation = "https://docs.rs/sincere"
homepage      = "https://github.com/mitum/sincere"
repository    = "https://github.com/mitum/sincere"
readme        = "README.md"
keywords      = ["web", "api"]
edition       = "2018"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
chrono = "0.4"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
url = "1.7"
httparse = "1.3"
num_cpus = "1.8"
libc = "0.2"
buf_redux = "0.6"
twoway = "0.1"
tempdir = "0.3.6"
rand = "0.5"
futures = "0.1"
hyper = "0.12"
futures-cpupool = "0.1"
queen-log = "0.1"
mime = "0"
mime_guess = "2.0.0-alpha.6"
nson = "0.1.3"
lazy_static = "1.2"
