[package]
name          = "sincere"
version       = "0.7.0-alpha.1"
license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "web framework"
documentation = "https://docs.rs/sincere"
homepage      = "https://github.com/mitum/sincere"
repository    = "https://github.com/mitum/sincere"
readme        = "README.md"
keywords      = ["web", "api"]
edition       = "2018"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
chrono = "0.4"
regex = "1.3"
serde = "1.0"
serde_json = "1.0"
url = "2.1"
httparse = "1.3"
num_cpus = "1.11"
twoway = "0.2"
rand = "0.7"
queen-log = "0.2"
mime = "0.3"
mime_guess = "2.0"
nson = "0.3.6"
